--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -7,7 +7,8 @@ layout: default
     <h1>{{ page.title | remove: "| Vis Design Lab" }}</h1>
   </header>-->
 	  
-	  <div class="banner">
+	  <div class="banner-team">
+      {% include team_header.html %}
 	  </div>
 
   <article class="team-content">
