improve styling of the team page

--- a/_includes/person.html
+++ b/_includes/person.html
@@ -10,9 +10,11 @@
       <a href="{{ person.website }}">{{ name }}</a>
       
       <span class="spacer">
-        {% capture numDots %}{{name | size | minus: 20 | times: -1}}{% endcapture %}
+        {% capture numDots %}{{name | size | minus: 23 | times: -1}}{% endcapture %}
         {% for i in (1..numDots) %}
+          <span class="dot">
           &middot;
+          </span>
         {% endfor %}
       </span>
     </span>
