--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -16,15 +16,18 @@ layout: default
 
       {% include person.html key="meyer" %}
       {% include person.html key="lex" %}
-
+      
+      <p class="space">&nbsp;</p>
       <h1>PhD Students</h1>
 
       {% include person.html role="phdstudent" %}
       
+      <p class="space">&nbsp;</p>
       <h1>Masters Students</h1>
       
       {% include person.html role="msstudent" %}
       
+      <p class="space">&nbsp;</p>
       <h1>Undergraduate Students</h1>
       
       {% include person.html role="undergrad" %}
