lots of changes
# Conflicts:
#	_includes/person.html
#	_layouts/team.html
#	_persons/dawson.md
#	css/site.scss

--- a/_includes/person.html
+++ b/_includes/person.html
@@ -1,4 +1,3 @@
-
 {% for person in site.persons %}
 {% if person.key == include.key  or person.role == include.role %}
 <p class="person-list-block">
@@ -6,7 +5,14 @@
     
     {% capture name %}{{ person.first_name }} {{ person.last_name }}{% endcapture %}
     
+	{% if person.role == "alumnus" %}
     <span class="name">
+      <a href="{{ person.website }}">{{ name }}</a>
+    </span>
+    {% endif %}
+	
+	{% if person.role != "alumnus" %}
+	<span class="name">
       <a href="{{ person.website }}">{{ name }}</a>
       
       <span class="spacer">
@@ -20,7 +26,7 @@
     <span class="interests">
       {{person.interests}}
     </span>
-    
+	{% endif %}
 </p>
 {% endif %}
 {% endfor %}
