--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -1,23 +1,26 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(http://fonts.googleapis.com/css?family=Rokkitt:400,700);
 @import url(http://fonts.googleapis.com/css?family=Roboto:300,400,500);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:700,400);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
+@import url(https://fonts.googleapis.com/css?family=Roboto:300italic);
 
 $old_sans-serif-font-family: Montserrat, Trebuchet, sans-serif;
 $old_serif-font-family: Montserrat, Trebuchet, sans-serif; //Vollkorn, Times, serif;
 $old_slab-font-family: Rokkitt, Trebuchet, sans-serif;
 
 $condensed-font-family: RobotoCondensed-regular, Montserrat, sans-serif;
+$light-condensed-font-family: RobotoCondensed-light, Montserrat, sans-serif;
+$italicized-font-family: Roboto-lightItalic, Montserrat, sans-serif;
 
 $sans-serif-font-family: Roboto, Trebuchet, sans-serif;
 $serif-font-family: Roboto, Trebuchet, sans-serif; //Vollkorn, Times, serif;
 $slab-font-family: Roboto Slab, Trebuchet, sans-serif;
 
-$page-title-font-family: $sans-serif-font-family;
+$page-title-font-family: $condensed-font-family;
 $page-title-font-weight: 900;
 $page-title-font-style: normal;
-$page-title-font-size: $base-font-size * 3;
+$page-title-font-size: $base-font-size * 3.5;
 
 $content-title-font-family: $slab-font-family;
 $content-title-font-weight: 400;
@@ -28,7 +31,8 @@ $page-content-font-weight: 300;
 $page-content-font-style: light;
 $page-content-font-size: 1.1em;
 
-$footer-content-font-family: $sans-serif-font-family;
+//$footer-content-font-family: $sans-serif-font-family;
+$footer-content-font-family: $light-condensed-font-family;
 $footer-content-font-weight: 400;
 $footer-content-font-style: normal;
 $footer-content-font-size: .7em;
@@ -144,4 +148,5 @@ cite {
   font-weight: $page-title-font-weight;
   font-style: $page-title-font-style;  
   font-size: $base-font-size * 3; // 16 * 3 = 48px
+  color: $blue2;
 }
