--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
           {% if site.email %}
           <li>
             <a href="mailto:{{ site.email }}">
-              <i class="fa fa-lg fa-envelope-o"></i>
+              <i class="fa fa-lg fa-envelope"></i>
               <span class="footer-text">Email</span>
             </a>
           </li>
@@ -57,9 +57,6 @@
 
 
   <div class="footer-content">
-    <span class="footer-logo">
-      <embed class="logo-footer-svg" src="{{ site.baseurl }}/assets/images/logos/bottle.svg" type="image/svg+xml">
-    </span>
     <div class="footer-disclaimer">
       <p>
         Copyright &copy; 2015 The Visualization Design Lab. All content on this website is licensed under the <br />
