--- a/_sass/base/_lists.scss
+++ b/_sass/base/_lists.scss
@@ -55,7 +55,7 @@ ul, ol {
       display: block;
     }  
   }
-      
+   
 	  
   @mixin pub-list($color) {
       margin: 0;
@@ -88,7 +88,30 @@ ul, ol {
 		}    
       }
     }
-  
+ 
+    @mixin no-icon-list($color) {
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+
+        li {
+          padding-left: -0.1em;
+          //padding-bottom: 0.5em;
+          line-height: $base-font-size * 1.2;
+          vertical-align: top;
+  		//text-align:right;
+          color: $base-font-color;
+          font-family: $condensed-font-family;
+          font-weight: 400;
+          font-size: $base-font-size * 0.9;
+          font-style: normal;
+          min-height: 2.5em;
+		  
+	      a:after{
+	         border-bottom-width: 0;
+	      }
+  	  }
+      } 
 
 ul.project-icon-list {
   @include icon-list($project-color,"\f013");
@@ -104,7 +127,8 @@ ul.publication-icon-list {
 }
 
 ul.institution-icon-list {
-  @include icon-list($team-color,"\f19c;");
+  @include no-icon-list($team-color);
+  
 }
 
 ul.person-icon-list {
