fixed image links

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -5,17 +5,17 @@
     {% if forloop.index == 1 %}
     <a href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
                                                            class="left-banner-image"
-                                                           src="/assets/images/papers/{{ publication.image }}"></a>
+                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}"></a>
     {% endif %}
     {% if forloop.index == 2 %}
     <a href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
                                                            class="top-right-banner-image"
-                                                           src="/assets/images/papers/{{ publication.image }}"></a>
+                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}"></a>
     {% endif %}
     {% if forloop.index == 3 %}
     <a href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
                                                            class="bottom-right-banner-image"
-                                                           src="/assets/images/papers/{{ publication.image }}"></a>
+                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}"></a>
     {% endif %}
     {% endfor %}
 </div>
