--- a/_includes/publication_list_entry.html
+++ b/_includes/publication_list_entry.html
@@ -1,7 +1,7 @@
 <div class="paper-list-block">
 	<a href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
                                                            class="paper-image-small"
-                                                           src="/assets/images/papers/{{ publication.image }}"></a>
+                                                           src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}"></a>
     <p>
         {% for author in publication.authors %}
 
