a couple more image link fixes

--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -61,7 +61,7 @@ layout: default
   </article>
 
   <article class="publication-content-aside">
-	<img alt="{{ page.shortname }} screenshot" class="paper-image-small-aside" src="/assets/images/papers/{{ page.image }}">
+	<img alt="{{ page.shortname }} screenshot" class="paper-image-small-aside" src="{{ site.baseurl }}/assets/images/papers/{{ page.image }}">
     {% if page.project %}
     <h1>Software</h1>
     <ul class="project-icon-list">
