add multiple website widths, start of responsive design, fixes #7

--- a/css/site.scss
+++ b/css/site.scss
@@ -12,8 +12,8 @@ $medium-display-columns: 12;
 $large-display-columns: 12;
 
 $small-display: new-breakpoint(max-width 519px $small-display-columns);
-$medium-display: new-breakpoint(min-width 520px max-width 1023px $medium-display-columns);
-$large-display: new-breakpoint(min-width 1024px $large-display-columns);
+$medium-display: new-breakpoint(min-width 520px max-width 1200px $medium-display-columns);
+$large-display: new-breakpoint(min-width 1200px $large-display-columns);
 
 /* site specific changes that do not fit into base */
 
@@ -208,7 +208,12 @@ body {
   width: 750px;
   margin: 30px auto 0px auto;
 
+  @include media($large-display) {
+    width: 1200px;
+  }
+
   @include media($small-display) {
+    width: 300px;
     margin: 10px auto 0px auto;
   }
 }
