--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -10,6 +10,18 @@ layout: default
 	  <div class="banner-team">
       {% include team_header.html %}
 	  </div>
+    
+    {% for person in site.persons %}
+      {% if person.graduated == null %}
+        {% if person.role == 'phdstudent' %}
+          {% assign ifphdstudent = 'true' %}
+        {% elsif person.role == 'msstudent' %}
+          {% assign ifmsstudent = 'true' %}
+        {% elsif person.role == 'undergrad' %}
+          {% assign ifundergrad = 'true' %}
+        {% endif %}
+      {% endif %}
+    {% endfor %}
 	  
   <article class="team-content">
       <h1>Faculty</h1>
@@ -17,19 +29,26 @@ layout: default
       {% include person.html key="meyer" %}
       {% include person.html key="lex" %}
       
-      <p class="space">&nbsp;</p>
-      <h1>PhD Students</h1>
+      {% if ifphdstudent == 'true' %}
+        <p class="space">&nbsp;</p>
+        <h1>PhD Students</h1>
+        
+        {% include person.html role="phdstudent" %}
+      {% endif %}
+      
+      {% if ifmsstudent == 'true' %}
+        <p class="space">&nbsp;</p>
+        <h1>Masters Students</h1>
 
-      {% include person.html role="phdstudent" %}
+        {% include person.html role="msstudent" %}
+      {% endif %}
       
-      <!-- <p class="space">&nbsp;</p> -->
-      <!-- <h1>Masters Students</h1> -->
-      
-      {% include person.html role="msstudent" %}
-      <p class="space">&nbsp;</p>
-      <h1>Undergraduate Students</h1>
-      
-      {% include person.html role="undergrad" %}
+      {% if ifundergrad == 'true' %}
+        <p class="space">&nbsp;</p>
+        <h1>Undergraduate Students</h1>
+
+        {% include person.html role="undergrad" %}
+      {% endif %}
       
       <p class="space-alumni">&nbsp;</p>
       <h1>Alumni</h1>
