make publications page split content by columns, addresses #15

--- a/_includes/publication_list_entry.html
+++ b/_includes/publication_list_entry.html
@@ -2,7 +2,7 @@
 	<a href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
                                                            class="paper-image-small"
                                                            src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}"></a>
-    <p>
+    <p class="pubs">
         {% for author in publication.authors %}
 
         {% assign known = false %}
