--- a/css/site.scss
+++ b/css/site.scss
@@ -131,6 +131,7 @@ $large-display: new-breakpoint(min-width 1200px $large-display-columns);
 	  //height: 15.5em;
 	  float: left;
 	  margin-right: 5px;
+    margin-bottom: 40px;
 	  padding:10px;
 	  border: 2px solid $dark-gray;
 	  /*
